[WIN32K:NTUSER] - Include the CLIPBOARDDATA structure itself when calculating the size passed to UserCreateObject in IntSynthesizeDib. Fixes user heap corruption when running user32_winetest:clipboard. CORE-13408

svn path=/trunk/; revision=74990